Fix responsive overflow for header

--- a/app/styles/_layout/_l-header.scss
+++ b/app/styles/_layout/_l-header.scss
@@ -20,6 +20,7 @@
     @media screen and (max-width: $media-screen-s) {
       overflow-x: auto;
       padding-bottom: .5rem;
+      width: 100%;
     }
   }
 
